client functionality done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Hammersmith+One&family=Karla&display=swap');
 
 .nav-logo {
     width: 100%;
@@ -36,11 +37,34 @@
 }
 
 .carousel-img {
-    width: 100vw;
+    width: 100%;
     height: 60vh;
     border-radius: 1%;
 }
 
 .main-page {
-    background-image: linear-gradient(to right, #929493 , rgb(182, 180, 180))
+    background: #1c92d2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f2fcfe, #1c92d2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f2fcfe, #1c92d2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.soc-med {
+    cursor: 'pointer'
+}
+
+.overview {
+    font-family: 'Karla';
+}
+
+.release_date {
+    font-family: 'Hammersmith One';
+}
+
+.popularity {
+    font-family: 'Hammersmith One';
+}
+
+.title {
+    font-family: 'Anton';
 }
